Stops translation flickering

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -221,6 +221,10 @@ canvas {
     width: 100%;
 }
 
+.translate-cloak {
+    visibility: hidden;
+}
+
 
 /*
 **************************************************************** Imports
